--- a/src/Gibbs.vcxproj.filters
+++ b/src/Gibbs.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="json.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="C:\Users\Devid\Desktop\corpus5.txt">
